--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 { 
-  "name": "Cola the Koala: An AI-generated book", 
+  "name": "Cola the Koala: An AI-generated book v0.0.2", 
   "short_name": "Cola the Koala", 
   "start_url": "https://cola.midtown.ai/#start",
   "display": "standalone", 
